force-app/main/default/objects/Lista_Espera__c/Lista_Espera__c.object-meta.xml
<CustomObject>
    <label>Lista Espera</label>
    <nameField>
        <displayFormat>L-{00}</displayFormat>
        <label>Lista Espera Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listas Espera</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>