force-app/main/default/objects/Lista_Espera__c/fields/Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <label>Creation Date</label>
    <type>DateTime</type>
</CustomField>