force-app/main/default/objects/Lista_Espera__c/fields/Estudiante__c.field-meta.xml
<CustomField>
    <fullName>Estudiante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estudiante</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00eak000002tP1R</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Listas Espera</relationshipLabel>
    <relationshipName>Listas_Espera</relationshipName>
    <type>Lookup</type>
</CustomField>