force-app/main/default/objects/Lista_Espera__c/fields/Materia__c.field-meta.xml
<CustomField>
    <fullName>Materia__c</fullName>
    <label>Materia</label>
    <referenceTo>Materia__c</referenceTo>
    <relationshipLabel>Listas Espera</relationshipLabel>
    <relationshipName>Listas_Espera</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>